tp_compiladores/src/analizador_sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_de_sentencias

   2  lista_de_sentencias : sentencia
   3                      | lista_de_sentencias sentencia

   4  sentencia : sentencia_ejecutable

   5  sentencia_ejecutable : asignacion

   6  asignacion : ID IGUAL expresion PUNT

   7  expresion : expresion '+' termino
   8            | expresion '-' termino
   9            | termino

  10  termino : termino '*' factor
  11          | termino '/' factor
  12          | factor

  13  factor : CTE
  14         | '-' factor
  15         | ID

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2
	lista_de_sentencias  goto 3
	sentencia  goto 4
	sentencia_ejecutable  goto 5
	asignacion  goto 6


state 1
	asignacion : ID . IGUAL expresion PUNT  (6)

	IGUAL  shift 7
	.  error


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : lista_de_sentencias .  (1)
	lista_de_sentencias : lista_de_sentencias . sentencia  (3)

	ID  shift 1
	$end  reduce 1

	sentencia  goto 8
	sentencia_ejecutable  goto 5
	asignacion  goto 6


state 4
	lista_de_sentencias : sentencia .  (2)

	.  reduce 2


state 5
	sentencia : sentencia_ejecutable .  (4)

	.  reduce 4


state 6
	sentencia_ejecutable : asignacion .  (5)

	.  reduce 5


state 7
	asignacion : ID IGUAL . expresion PUNT  (6)

	ID  shift 9
	CTE  shift 10
	'-'  shift 11
	.  error

	expresion  goto 12
	termino  goto 13
	factor  goto 14


state 8
	lista_de_sentencias : lista_de_sentencias sentencia .  (3)

	.  reduce 3


state 9
	factor : ID .  (15)

	.  reduce 15


state 10
	factor : CTE .  (13)

	.  reduce 13


state 11
	factor : '-' . factor  (14)

	ID  shift 9
	CTE  shift 10
	'-'  shift 11
	.  error

	factor  goto 15


state 12
	asignacion : ID IGUAL expresion . PUNT  (6)
	expresion : expresion . '+' termino  (7)
	expresion : expresion . '-' termino  (8)

	PUNT  shift 16
	'+'  shift 17
	'-'  shift 18
	.  error


state 13
	expresion : termino .  (9)
	termino : termino . '*' factor  (10)
	termino : termino . '/' factor  (11)

	'*'  shift 19
	'/'  shift 20
	PUNT  reduce 9
	'+'  reduce 9
	'-'  reduce 9


state 14
	termino : factor .  (12)

	.  reduce 12


state 15
	factor : '-' factor .  (14)

	.  reduce 14


state 16
	asignacion : ID IGUAL expresion PUNT .  (6)

	.  reduce 6


state 17
	expresion : expresion '+' . termino  (7)

	ID  shift 9
	CTE  shift 10
	'-'  shift 11
	.  error

	termino  goto 21
	factor  goto 14


state 18
	expresion : expresion '-' . termino  (8)

	ID  shift 9
	CTE  shift 10
	'-'  shift 11
	.  error

	termino  goto 22
	factor  goto 14


state 19
	termino : termino '*' . factor  (10)

	ID  shift 9
	CTE  shift 10
	'-'  shift 11
	.  error

	factor  goto 23


state 20
	termino : termino '/' . factor  (11)

	ID  shift 9
	CTE  shift 10
	'-'  shift 11
	.  error

	factor  goto 24


state 21
	expresion : expresion '+' termino .  (7)
	termino : termino . '*' factor  (10)
	termino : termino . '/' factor  (11)

	'*'  shift 19
	'/'  shift 20
	PUNT  reduce 7
	'+'  reduce 7
	'-'  reduce 7


state 22
	expresion : expresion '-' termino .  (8)
	termino : termino . '*' factor  (10)
	termino : termino . '/' factor  (11)

	'*'  shift 19
	'/'  shift 20
	PUNT  reduce 8
	'+'  reduce 8
	'-'  reduce 8


state 23
	termino : termino '*' factor .  (10)

	.  reduce 10


state 24
	termino : termino '/' factor .  (11)

	.  reduce 11


22 terminals, 9 nonterminals
16 grammar rules, 25 states
